@@ -6,7 +6,6 @@ Hand userspace a fstat buf for object with event
 Userspace
 =========
 Rename unpackaged to untrusted 
-Do not use rpm database directly as trust source, make a copy and use that
 Add admin defined whitelist of dirs or files
 Add ability to detect bad interpreter
 Support execute events for better subj cache utilization
