@@ -33,6 +33,7 @@
 #include "nv.h"
 #include "message.h"
 #include "file.h" // This seems wrong
+#include "database.h"
 
 //#define DEBUG
 #define UNUSED 0xFF
@@ -417,7 +418,7 @@ static int obj_dir_test(object_attr_t *o, object_attr_t *obj)
 	else if ((o->len == 8) && strcmp(o->o, "execdirs") == 0)
 		return check_dirs(1, obj->o);
 	else if ((o->len == 10) && strcasecmp(o->o, "unpackaged") == 0) {
-		if (check_packaged_from_file(obj->o))
+		if (check_trust_database(obj->o))
 			return 0;
 	// Just a normal dir test
 	} else if (strncmp(obj->o, o->o, o->len))
@@ -439,7 +440,7 @@ static int subj_dir_test(subject_attr_t *s, subject_attr_t *subj)
 	else if ((len == 8) && strcmp(s->str, "execdirs") == 0)
 		return check_dirs(1, subj->str);
 	else if ((len == 10) && strcasecmp(s->str, "unpackaged") == 0) {
-		if (check_packaged_from_file(subj->str))
+		if (check_trust_database(subj->str))
 			return 0;
 
 	// Just a normal dir test.
@@ -603,7 +604,7 @@ static int check_subject(lnode *r, event_t *e)
 						return 0;
 				} else if (type == EXE &&
 				   strcasecmp(r->s[cnt].str, "unpackaged")==0) {
-					if (check_packaged_from_file(subj->str))
+					if (check_trust_database(subj->str))
 						return 0;
 				} else if (strcmp(subj->str, r->s[cnt].str))
 					return 0;
@@ -639,7 +640,7 @@ static decision_t check_object(lnode *r, event_t *e)
 					return 0;
 			} else if (r->o[cnt].type == PATH &&
 				 strcasecmp(r->s[cnt].str, "unpackaged") == 0) {
-				if (check_packaged_from_file(obj->o))
+				if (check_trust_database(obj->o))
 					return 0;
 			} else if (strcmp(obj->o, r->o[cnt].o))
 					return 0;
