@@ -2,6 +2,7 @@
 - Add some systemd process protections
 - Update object hash calculation to better determine uniqueness
 - Override rpm's signal handling
+- Use private database as trust store
 
 0.8.5
 - Update spec file and license info
